# lock-box

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  context.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4751a33fc3f4_initial_schema.py  512c63993dfe_fix_removing_orphans.py  ae385a06b321_initial_schema.py  db47478db28f_fix_removing_orphans.py
backend/src/backend/: config.py  db.py  main.py  models.py
backend/src/backend/api/: access.py  auth.py  documents.py  invites.py  rooms.py
backend/src/backend/services/: jwt.py  s3.py
backend/src/backend/utils/: audit.py  dependencies.py  security.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/invite/accept/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/rooms/[id]/: page.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/lib/: api.ts  auth-context.tsx
localstack/init/ready.d/: 01-init-buckets.sh  s3-cors.json
